--- a/digitalf.html
+++ b/digitalf.html
@@ -109,7 +109,7 @@
                 <li>Sistema de sujeción.</li>
                 <li>Sierra.</li>
               </ul>
-              <p>La banda transportadora de entrada cuenta con un sistema de alineación para lograr introducir el tubo en el sistema de sujeción, y al final de la misma se encuentra un sensor de proximidad. El sistema de sujeción cuenta con un par de soportes sobre los cuales se ubica el tubo, unas cadenas y un cilindro encargado de apretar el tubo cuando se contrae. La sierra está conformada por un disco de sierra y su respecto motor, y un cilindro encargado de empujar la sierra para realizar el corte del tubo. Finalmente la pieza cortada cae a la banda transportadora de la salida para pasar a la siguiente estación.</p>
+              <p>La banda transportadora de entrada cuenta con un sistema de alineación para lograr introducir el tubo en el sistema de sujeción, y al final de la misma se encuentra un sensor de proximidad. El sistema de sujeción cuenta con un par de soportes sobre los cuales se ubica el tubo, unas cadenas y un cilindro encargado de apretar el tubo cuando se contrae. La sierra está conformada por un disco de sierra, su respectivo motor, y un cilindro encargado de empujar la sierra para realizar el corte del bambú. Finalmente, la pieza cortada cae a la banda transportadora de la salida para pasar a la siguiente estación.</p>
 
             </div>
 
@@ -130,7 +130,7 @@
 
             <div class="icon-box">
               <h4>Máquina para corte tipo boca de pescado y tipo transversal en tubos de aluminio.</h4>
-              <p>El diseño de la estación de corte tipo boca de pescado para los tubos de aluminio es muy similar al de corte de bambú salvo que cuenta con un mecanismo adicional, el cual se encarga de ubicar la herramienta de corte (el copa sierra) en la posición deseada y de ejecutar la operación de corte circular. Este mecanismo está conformado por un cilindro para desplazar la herramienta de corte, un motor para generar el movimiento rotacional de la misma y un servomotor para controlar la posición de la base.</p>
+              <p>El diseño de la estación de corte tipo boca de pescado para los tubos de aluminio es muy similar al de corte de bambú salvo que cuenta con un mecanismo adicional, el cual se encarga de ubicar la herramienta de corte (la copa sierra) en la posición deseada y de ejecutar la operación de corte circular. Este mecanismo está conformado por un cilindro para desplazar la herramienta de corte, un motor para generar el movimiento rotacional de la misma y un servomotor para controlar la posición angular de la base.</p>
             </div>
             
 
