--- a/actuadores.html
+++ b/actuadores.html
@@ -88,8 +88,8 @@
 
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>Diagrama neumático y eléctrico </h2>
-        <p>Acorde a los procesos a automatizar seleccionados, se muestra a continuación el diagrama eléctrico y neumático para cada uno:</p>
+        <h2>Diagrama Neumático y Eléctrico </h2>
+        <p>Acorde a los procesos a automatizar seleccionados, se muestra a continuación el diagrama eléctrico y neumático para cada uno.</p>
     </div>
     <h3>Máquina para corte de bambú.</h3>
     <section class="service-details" data-aos="fade-up" date-aos-delay="200">
@@ -166,7 +166,7 @@
 
 <p>Debido a que la fuerza específica de corte de un material está relacionada directamente con la dureza que presente, se realizó una interpolación para estimar la fuerza específica de corte del aluminio 6061, y a continuación se promedió con la fuerza específica de las aleaciones de aluminio.</p>
 <div align="center"><img src="assets/img/Ecuaciones/eq1.PNG"></div>
-    <p>De propuesto una viruta 1 mm de espesor y la sierra cuenta con un espesor de diente de 1 mm, con lo cual la fuerza de corte es de 835.71 N. </p>
+    <p>Se propone una viruta de 1 mm de espesor ya que la sierra cuenta con un espesor de diente de 1 mm, con lo cual la fuerza de corte es de 835.71 N. </p>
     <p>Por dimensiones de la máquina el cilindro debe aplicar una fuerza menor</p>
 <div align="center"><img src="assets/img/Ecuaciones/eq2.PNG"></div>
 <p>En el caso de los tubos de bambú se encontraron los siguientes parámetros:</p>
@@ -175,13 +175,13 @@
   <li>Dureza de la especie Haya: 2.8 HB</li>
   <li>Dureza del bambú: 4 HB</li>
 </ul>  
-<p>Se aplicó una relación proporcional, obteniendo una fuerza específica de corte para el bambú de 72.86 N/mm^2. Se propuso las mismas condiciones para tener una fuerza de corte de 72.86 N y por las dimensiones de la máquina la fuerza de máquina resulto de 36.43 N.</p>
+<p>Se aplicó una relación proporcional, obteniendo una fuerza específica de corte para el bambú de 72.86 N/mm^2. Se propuso las mismas condiciones para tener una fuerza de corte de 72.86 N y por las dimensiones de la máquina la fuerza de máquina resultó de 36.43 N.</p>
 <p>Por último se determinó la fuerza que debían aplicar los cilindros encargados de sujetar los tubos con las cadenas, para lo cual se obtuvieron los siguientes coeficientes de fricción:</p>
 <ul>
   <li>Coeficiente de fricción aluminio – aluminio: 1.1 </li>
   <li>Coeficiente de fricción aluminio – madera: 0.25 </li>
 </ul>
-<p>Con base en las fuerzas de corte se calculó una fuerza normal requerida para el aluminio de 760N y para el bambú de 291 N. Para el cilindro de sujeción del bambú se toma el valor calculado mientras que para el aluminio se toma el valor de fuerza de corte al ser mayor.</p>
+<p>Con base en las fuerzas de corte se calculó una fuerza normal requerida para el aluminio de 760 N y para el bambú de 291 N. Para el cilindro de sujeción del bambú se toma el valor calculado mientras que para el aluminio se toma el valor de fuerza de corte al ser mayor.</p>
 
 <h3>Selección de cilindros</h3>
 <p>Para seleccionar los cilindros adecuados se parte de la siguiente información:</p>
