--- a/economica.html
+++ b/economica.html
@@ -79,7 +79,7 @@
           <h2>Evaluación económica del Proyecto</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Evaluación económica del Proyecto</li>
+            <li>Evaluación Económica del Proyecto</li>
           </ol>
         </div>
 
