--- a/economica.html
+++ b/economica.html
@@ -76,7 +76,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Evaluación económica del Proyecto</h2>
+          <h2>Evaluación Económica del Proyecto</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Evaluación Económica del Proyecto</li>
@@ -87,7 +87,7 @@
     </section>
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>Evaluación económica del Proyecto.</h2>
+        <h2>Evaluación Económica del Proyecto.</h2>
         <p>A continuación se presenta una hoja de excel con la evaluación económica del proyecto. </p>
       <br/>
       <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUf6UcFJ2bau0-Fa0Wva8eqBBKdklfH2G63N8CaNvb9ejJhnZuMCZoIKK4YhgAuA/pubhtml?widget=true&amp;headers=false"></iframe>    </div>
