--- a/indu4.0.html
+++ b/indu4.0.html
@@ -93,16 +93,16 @@
         <div class="icon-box">
           <p>La arquitectura implementada para el desarrollo del proyecto, se basa en la pirámide de la automatización.<br/></p>
             <ol>
-              <li>En el primer nivel o nivel de planta (Sensores y Actuadores) se realizara al implementar el módulo Mechatronics Concept Designer de Siemens NX para los procesos a amortizar en el proceso de producción de la bicicleta, adicionalmete se hará el uso de RobotStudio de la firma ABB con el objetivo de simular la celda robotizada.</li>
+              <li>En el primer nivel o nivel de planta (Sensores y Actuadores) se implementará el módulo Mechatronics Concept Designer de Siemens NX para los procesos a amortizar en el proceso de producción de la bicicleta, Adicionalmete, se hará el uso de RobotStudio de la firma ABB con el objetivo de simular la celda robotizada.</li>
               <li>En el nivel de Control se tendrá la simulación de un PLC en el entorno de Studio5000, de Rockwell Automation.</li>
-              <li>Para el nivel SCADA o de supervisión se utilizará el Ignition de Inductive Automation, actuando como intermediario de comunicaciones por medio del protocolo OPC, adicionalmente la implementación de comunicación a través de Google Cloud.</li>
+              <li>Para el nivel SCADA o de supervisión se utilizará el Ignition de Inductive Automation, actuando como intermediario de comunicaciones por medio del protocolo OPC. Adicionalmente la implementación de comunicación a través de Google Cloud.</li>
               <li>Respecto al nivel de planeación o MES (Manufacturing Execution System) se hará uso del software Tecnomatix-Plant Simulation, el cual permite la planificación y toma de decisiones respecto a la planta.</li>
             </ol>
-          <p>Para el manejo del sistema de comunicación, se instalaran lo diferentes software en los diferentes equipos
-            de los estudiantes del equipo de trabajo, donde cada computador se comunicara por medio de Igntion Gateway a Google Cloud:</p>
+          <p>Para el manejo del sistema de comunicación, se instalarán lo diferentes software en los diferentes equipos
+            de los estudiantes del equipo de trabajo, donde cada computador se comunicará por medio de Igntion Gateway a Google Cloud:</p>
           <ul>
             <li>RobotStudio: Felipe Romero</li>
-            <li>Studio5000:  Angel Diaz</li>
+            <li>Studio5000:  Ángel Díaz</li>
             <li>Siemens NX:  Gabriel Acevedo y Sergio Quintero.</li>
           </ul>
           <br />
