--- a/celda.html
+++ b/celda.html
@@ -115,7 +115,7 @@
             <div class="card">
               <div class="card-body" style="text-align:center;">
                 <h5 class="card-title">Video Simulación</a></h5>
-                <iframe src="https://drive.google.com/file/d/1D1eiBpTGKfKr2onPQRBWTBoD9PBin1js/preview" width="640" height="480"></iframe>
+                <iframe src="https://drive.google.com/file/d/1Jl01YOuMZzieIZVlGf5nOUgrtdJQ4rXI/preview" width="640" height="480" allow="autoplay"></iframe>
               </div>
             </div>
           </div>
