--- a/planta.html
+++ b/planta.html
@@ -327,7 +327,9 @@
     </section>
  
     <div  data-aos="fade-up" data-aos-delay="200">
+      <div class="section-title" data-aos="fade-up">
         <h1>Planta automatizada</h1>
+      </div>
         <p>A raíz del estudio previo se procede a hacer las modificaciones correspondientes en las plantas de fabricación de bicicletas urbanas híbridas y de contrapedal respectivamente.</p>
         <p>Para el caso de la planta automatizada para bicicleta urbana híbrida se reemplazaron las numerosas estaciones de corte y boca de pescado en una sola. Los dos bloques encerrados en el recuadro representan la maquina automatizada de corte y boca de pescado diseñada.</p>
         <div align="center"><img src="assets/img/PlantSimu/auto1.png"></div>
@@ -339,7 +341,10 @@
         <p>En la siguiente tabla se muestra una comparación con los anteriores indicadores de producción en la que se evidencia una reducción en el tiempo de fabricación de las bicicletas tanto para la producción de bicicletas híbridas como para las de contrapedal, haciendo que se incremente la capacidad de producción en un 66%. Donde antes se producían 101 bicicletas híbridas y 130 bicicletas de contrapedal, ahora gracias a la implementación de la automatización de los procesos de manufactura mencionados anteriormente, se aumenta la capacidad de producción a 168 y 216 bicicletas respectivamente. </p>
         <div align="center"><img src="assets/img/PlantSimu/auto4.png"></div>
         <hr>
-        <h2>MES</h2>
+        <div class="section-title" data-aos="fade-up">
+          <h1>MES</h1>
+        </div>
+        
         <p>Se eligió Odoo como herramienta computacional para la implementación del sistema MES principalmente por su flexibilidad. En lugar de adquirir un paquete completo, Odoo nos permite elegir los módulos que vamos a implementar para mejorar nuestro sistema de gestión y por aparte cobra licencias por su uso, de acuerdo al número de trabajadores e independientemente de su rango en la empresa. Esta modalidad de servicio trae como beneficios una reducción de costos y evitar la adquisición de herramientas que no se utilizarán.</p>
         <img src="assets/img/PlantSimu/herramienta.jpeg" class="img-fluid" alt="">
       </div>
