--- a/controladores.html
+++ b/controladores.html
@@ -106,7 +106,7 @@
               <p>El programa correspondiente a la máquina de corte de bambú funciona de la siguiente forma:</p>
               <ul>
                 <li>0.	Mediante una señal de inicio se activa y se enclava la banda transportadora.</li>
-                <li>1.	Al activarse el sensor de la banda transportadora se activa un temporalizador el cual cuenta el tiempo requerido para que el tubo se ubique a una determinada distancia siendo trasladado a la velocidad de la banda transportadora. </li>
+                <li>1.	Al activarse el sensor de la banda transportadora se activa un temporalizador, el cual cuenta el tiempo requerido para que el tubo se ubique a una determinada distancia siendo trasladado a la velocidad de la banda transportadora. </li>
                 <li>2.	La banda también se puede activar cuando se completa una vez la rutina diseñada.</li>
                 <li>3.	Una vez el temporizador finaliza y la banda se detiene, se activa el cilindro del sistema de sujeción. Se da una espera mientras es ajustado el tubo.</li>
                 <li>4.	Cumplido el tiempo para ajustar, se activa el cilindro y el motor de la sierra para proceder con el corte del material.</li>
@@ -132,7 +132,7 @@
 
             <div class="icon-box">
               <h4>Máquina para corte tipo boca de pescado y tipo transversal en tubos de aluminio.</h4>
-              <P>La parte inicial de programa de control perteneciente a la máquina de boca de pescado es muy similar al de la máquina de corte de bambú. En la línea 3 se diferencia en que mientras se hace la sujeción del tubo, el posicionador va ubicando la herramienta copa sierra en ángulo de corte deseado.  En este caso primero se activa el copa sierra, corta, regresa y luego se activa la sierra. En la línea 8 cuando ambos procesos han finalizado el cilindro del sistema de sujeción se expande, liberando así el tumbo para proceder con el siguiente corte.</P>
+              <P>La parte inicial de programa de control perteneciente a la máquina de boca de pescado es muy similar al de la máquina de corte de bambú. En la línea 3 se diferencia en que mientras se hace la sujeción del tubo, el posicionador va ubicando la herramienta copa sierra en ángulo de corte deseado. En este caso primero se activa el copa sierra, corta, regresa y luego se activa la sierra. En la línea 8 cuando ambos procesos han finalizado el cilindro del sistema de sujeción se expande, liberando así el tubo para proceder con el siguiente corte.</P>
             </div>
             
 
