--- a/controladores.html
+++ b/controladores.html
@@ -88,7 +88,7 @@
     <div class="container" data-aos="fade-up">
       <div class="section-title">
         <h2>Controladores Industriales PLC</h2>
-        <p>Se utilizó el software Studio 5000 y el lenguaje de programación ladder para elaborar el programa de control de las máquinas automatizadas. </p>
+        <p>Se utilizó el software Studio 5000 y el lenguaje de programación Ladder para elaborar el programa de control de las máquinas automatizadas. </p>
       <br/>
     </div>
     <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
