Auto stash before merge of "main" and "origin/main"

--- a/economica.html
+++ b/economica.html
@@ -88,9 +88,14 @@
     <div class="container" data-aos="fade-up">
       <div class="section-title">
         <h2>Evaluación Económica del Proyecto.</h2>
-        <p>A continuación se presenta una hoja de excel con la evaluación económica del proyecto. </p>
+        <br>
+        <p>A partir de los indicadores de producción obtenidos en PlantSimulation se hace una evaluación económica de la planta con y sin automatización. Para esto se parte del supuesto que se vende el 80% de la capacidad máxima de producción de las plantas. En el peor caso se obtiene una rentabilidad del 42% que es cuando se producen únicamente bicicletas urbanas híbridas en una planta sin automatización. Esta rentabilidad aumenta a 56% al implementar la automatización de los procesos de manufactura respectivos. Asimismo, si se produjeran únicamente bicicletas urbanas de contrapedal, con las cuales se obtiene una utilidad mayor, se obtiene una rentabilidad de 47% sin automatización y de 61% con automatización.  </p>
+        <br>
+        <p>El proyecto que se propone implementar tiene un costo de USD$84,504.33, este valor contempla toda la materia prima requerida junto con el valor de la implementación y la mano de obra. Para esto se pretende obtener un préstamo por el valor total de la inversión, el cual se pretende pagar en un plazo de 12 meses. Con esta inversión se pretende aumentar la rentabilidad al aumentar la producción y disminuir los costos de producción y mano de obra significativamente, sin embargo habrá un aumento en los costos de mantenimiento y servicios ya que la implementación de la automatización requiere de más recursos y mantenimiento especializado. A pesar de esto, la rentabilidad en la producción aumenta.  </p>
+        <br>
+        <p>Luego de un análisis del caso más rentable en el que se producen únicamente bicicletas de contrapedal en la planta automatizada, se miden los flujos de los futuros ingresos y egresos y se descuenta la inversión inicial de COP$325,341,671 quedando así una ganancia de COP$726,952,939 en un periodo de 12 meses suponiendo un costo de oportunidad del 10%, por lo cual se determina la viabilidad del proyecto. Adicionalmente, se obtendría una rentabilidad de la inversión del 47% y un plazo de recuperación de la inversión de 2 meses.</p>  
       <br/>
-      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUf6UcFJ2bau0-Fa0Wva8eqBBKdklfH2G63N8CaNvb9ejJhnZuMCZoIKK4YhgAuA/pubhtml?widget=true&amp;headers=false"></iframe>    </div>
+      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRUf6UcFJ2bau0-Fa0Wva8eqBBKdklfH2G63N8CaNvb9ejJhnZuMCZoIKK4YhgAuA/pubhtml?widget=true&amp;headers=false"width="1000" height="680"></iframe>    </div>
   </div>
 
 
