Update Error Video SCADA

--- a/scada.html
+++ b/scada.html
@@ -165,7 +165,7 @@
         </div>
             <div class="card-body" style="text-align:center;">
               <h5 class="card-title">Video Simulación</a></h5>
-              <iframe src="https://drive.google.com/file/d/1OyOhXVdU_mvT6ULUYPnqwEcV5-TyjE9J/preview" width="640" height="480" allow="autoplay"></iframe> 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/z9UFDQKQNPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
