--- a/team.html
+++ b/team.html
@@ -132,12 +132,7 @@
               </div>
               <div class="member-info">
                 <h4>Sergio Esteban Quintero Benavides</h4>
-                <p>Mis aportes en este proyecto se encaminaron en la Gestión de producción y automatización,
-                  en esta sección en particular fue vital el trabajo en equipo debido a todas las consideraciones que
-                  debiamos realizar con el fin de modelar un proceso lógico de fabricacion de bicicletas de bambú. Por otra parte,
-                  en esta misma sección realicé junto con otros compañeros el análisis de indicadores de producción y el proceso de
-                  pre automatización. Adicionalmente, aporté con algunos datos técnicos sobre las bicicletas que fueron utiles
-                  para determinar el procesos de fabricación de las mismas debido a mi afición por este deporte.
+                <p>Mis aportes en este proyecto se encaminaron en la Gestión de producción y automatización, asi como en la configuración de los modelos de Digital Factory y el diseño de la celda robotizada. en estas secciones en particular fue vital el trabajo en equipo debido a todas las consideraciones que debiamos realizar con el fin de modelar un proceso lógico de fabricacion de bicicletas de bambú así como la simulación de este procesos teniendo en cuenta la sinergia de los diferentes software utilizados. Por otra parte, la organización de tareas y funciones entre los miembros del equipo fue de vital importancia para el correcto funcionamiento de las simulaciones realizadas. Adicionalmente, aporté con algunos datos técnicos sobre las bicicletas que fueron útiles para determinar los procesos de fabricación de las mismas. En particular, se me facilitó el uso del software NX lo cual fue de mucha ayuda para el proyecto debido a que nos permitió realizar la sección del comisionamiento virtual de la manera más optima, asegurando el correcto funcionamiento de la simulación.
                 </p>
               </div>
             </div>
