Correcion Error video Celda

--- a/celda.html
+++ b/celda.html
@@ -115,7 +115,7 @@
             <div class="card">
               <div class="card-body" style="text-align:center;">
                 <h5 class="card-title">Video Simulación</a></h5>
-                <iframe src="https://drive.google.com/file/d/1Jl01YOuMZzieIZVlGf5nOUgrtdJQ4rXI/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Q3wsPY5umaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -124,7 +124,7 @@
             <div class="card">
               <div class="card-body" style="text-align:center;">
                 <h5 class="card-title">Análisis de riesgos</a></h5>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Q3wsPY5umaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRm7G0XDaL8-tKB5k-kRkWiDUuHxAW4K5Xuog1RJ3ysjESq7gRV0L9x60w_WS8Ntw/pubhtml?widget=true&amp;headers=false"width="1000" height="680"></iframe>
               </div>
             </div>
           </div>
